<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    android:background="@color/background_color">

    <!-- FPT Logo -->
    <ImageView
        android:id="@+id/fpt_logo_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_20"
        android:contentDescription="@string/fpt_logo_description"
        android:src="@drawable/image_fpt_logo_welcome"
        tools:ignore="ImageContrastCheck" />

    <!-- Signup Form Title -->
    <TextView
        android:id="@+id/signup_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_120"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_form_title"
        android:textSize="@dimen/text_size24"
        android:textStyle="bold" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/username_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_form_title"
        android:layout_marginTop="@dimen/margin_20"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:minHeight="@dimen/margin_48"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/textcolorHint"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_signup"
        android:layout_marginTop="@dimen/margin_10"
        android:autofillHints=""
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="@dimen/margin_48"
        android:selectAllOnFocus="true"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Confirm Password Input -->
    <EditText
        android:id="@+id/confirm_password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_signup"
        android:layout_marginTop="@dimen/margin_10"
        android:hint="@string/confirm_password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="@dimen/margin_48"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/textcolorHint"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <!-- Signup Button -->
    <Button
        android:id="@+id/button_signup_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/signup_button_text"
        android:enabled="true" />

    <!-- Already Have Account Text -->
    <TextView
        android:id="@+id/text_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_signup_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/dacotaikhoan" />

    <!-- Layout chứa đường kẻ và chữ "Hoặc" -->
    <LinearLayout
        android:id="@+id/or_layout_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_already_have_account"
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- Đường kẻ bên trái -->
        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/height_1"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_16"
            android:background="@color/black" />

        <!-- TextView "Hoặc" -->
        <TextView
            android:id="@+id/text_or_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:text="@string/or_text"
            android:textSize="@dimen/text_size20"
            android:textStyle="bold" />

        <!-- Đường kẻ bên phải -->
        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/height_1"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@color/black" />
    </LinearLayout>

    <!-- Re-login Button -->
    <Button
        android:id="@+id/button_relogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/or_layout_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/relogin_button_text" />


</RelativeLayout>